--- a/aartics/css/aartics.css
+++ b/aartics/css/aartics.css
@@ -33,15 +33,15 @@ h1
   color: #2e6e80;
 }
 
-/**
-  * important: keep position fixed, you can however use top:0 instead of bottom:0
-  * if you want to make it stick to the top of the browser
-  */
 .scroll
 {
   position: fixed;
   bottom: 0;
   left: 0;
+}
+
+.redText {
+    fill: red;
 }
 
 /**
