--- a/aartics/css/aartics.css
+++ b/aartics/css/aartics.css
@@ -3,7 +3,8 @@ body
 {
   padding: 0;
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'ABeeZee', sans-serif;
+  font-size: 22px;
 }
 
 /* hide horizontal scrollbars, since we use the vertical ones to scroll to the right */
@@ -14,23 +15,16 @@ body
 }
 
 .cls-1 {
-  fill: #f2f2f2;
+  fill: #7e7e7e;
 }
 
 .cls-1, .cls-2 {
   stroke: #000;
-  stroke-miterlimit: 10;
+/*   stroke-miterlimit: 1; */
 }
 
 .cls-2 {
-  fill: #fff;
-}
-
-h1
-{
-  font-size: 20px;
-  font-weight: normal;
-  color: #2e6e80;
+  fill: #ffffff;
 }
 
 .scroll
