cannot leave the site using the back function, affordance for scrolling confusion. will need visual cue to be added

--- a/aartics/css/aartics.css
+++ b/aartics/css/aartics.css
@@ -38,6 +38,11 @@ body
     fill: red;
 }
 
+.raleway {
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+}
+
 #credits {
   font-size: 12px;
 }
