--- a/aartics/css/aartics.css
+++ b/aartics/css/aartics.css
@@ -1,6 +1,7 @@
 html,
 body
 {
+  background: #ffffff;
   padding: 0;
   margin: 0;
   font-family: 'ABeeZee', sans-serif;
@@ -45,6 +46,7 @@ body
 
 #credits {
   font-size: 12px;
+  fill: black;
 }
 
 /**
