--- a/aartics/css/aartics.css
+++ b/aartics/css/aartics.css
@@ -3,7 +3,7 @@ body
 {
   padding: 0;
   margin: 0;
-  font-family: 'ABeeZee', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 20px;
 }
 
@@ -15,20 +15,21 @@ body
 }
 
 text {
-  fill: white
+  fill: whitesmoke;
 }
 
 .cls-1 {
   fill: #374959;
   fill-opacity: .8;
   stroke: #29626d;
+  z-index: 1;
 }
 
 .cls-2 {
   fill: rgba(34, 49, 63, 0.89);
   stroke-width: 2px;
-/*   stroke: url('#exampleGradient') */
   stroke: #b5b5b5;
+  z-index:2;
 
 }
 
@@ -66,10 +67,6 @@ h1 {
   z-index: 1000;
 }
 
-.redText {
-    fill: red;
-}
-
 .raleway {
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
@@ -81,59 +78,64 @@ h1 {
 }
 
 .project_box {
-  fill: none;
-  stroke: red;
+  stroke:#8ac1c0;
   stroke-width: 7px;
 }
 
 #_7 {
-  fill: red;
-  fill-opacity: 0.1;
+  fill: white;
+  fill-opacity: 0.0;
 }
 
 #_7:hover{
-  fill-opacity:0.5;
+/*   fill-opacity:0.5; */
+/*   stroke:#75FFFA; */
+  stroke: url('#exampleGradient');
+
 }
 
 #_16 {
-  fill: red;
-  fill-opacity: 0.1;
+  fill: white;
+  fill-opacity: 0.0;
 }
 
 #_16:hover{
-  fill-opacity:0.5;
+/*   fill-opacity:0.5; */
+  stroke:url('#exampleGradient');
 }
 
 #_18 {
-  fill: red;
-  fill-opacity: 0.1;
+  fill: white;
+  fill-opacity: 0.0;
 }
 
 #_18:hover{
-  fill-opacity:0.5;
+/*   fill-opacity:0.5; */
+  stroke:url('#exampleGradient');
 }
 
 #_3 {
-  fill: red;
-  fill-opacity: 0.1;
+  fill: white;
+  fill-opacity: 0.0;
 }
 
 #_3:hover{
-  fill-opacity:0.5;
+/*   fill-opacity:0.5; */
+  stroke:url('#exampleGradient');
 }
 
 .contact_class {
-  fill: white;
-  fill-opacity: 0.7;
-  stroke: black;
+  fill: #22313f;
+  fill-opacity: 0.4;
+  stroke: #71F300;
   stroke-width: 4px;
 }
 
-#gmail1:hover {
+#gmail1 a:hover {
   fill: red;
 }
 
-#linkedin1:hover {
+#linkedin1 a:hover {
   fill: red;
   stroke: red;
 }
@@ -141,4 +143,30 @@ h1 {
 #resume1:hover {
   fill: red;
   stroke: red;
+}
+
+.ux {
+  fill:#548687;
+}
+
+.casestudy a{
+  font-family: Raleway;
+  font-style: Extra-Light;
+  font-size: 11px;
+/*   text-decoration: underline; */
+  fill:white;
+}
+
+.projectdescription a{
+  font-family: Raleway;
+  font-style: thin;
+  font-size: 11px;
+  fill: white;
+}
+
+.traleway {
+  font-family: Raleway;
+  font-style: italic;
+  font-size: 15px;
+  fill: #ffffff;
 }
