minor sfac commits, going to start new branch

--- a/aartics/css/aartics.css
+++ b/aartics/css/aartics.css
@@ -5,7 +5,7 @@ body
   margin: 0;
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
-  background-color: #374959;
+  background-color: #22313f;
 }
 
 /* jinvertscroll: hide horizontal scrollbars, since we use the vertical ones to scroll to the right */
