--- a/aartics/projects/sfac/css/aartics_sfac.css
+++ b/aartics/projects/sfac/css/aartics_sfac.css
@@ -3,11 +3,12 @@ body
 {
   padding: 0;
   margin: 0;
-  font-family: 'ABeeZee', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 12px;
   overflow-x: hidden;
   width: 3000px;
   height: 760px;
+  background-color: black;
 }
 
 .header {
@@ -20,6 +21,7 @@ body
 }
 
 h1 {
+  font-family: 'Raleway', sans-serif;
   color:white;
   padding-left: 80px;
   padding-top: 5px;
@@ -49,38 +51,3 @@ h1 {
 img {
   max-height: 760px;
 }
-/*
-
-h1 {
-
-}
-
-p{
-
-}
-
-.inline_divs {
-  float: bottom;
-}
- */
-/**
-  * z-index ordering of the different layers, do this for your layers,
-  * also assign absolute width (to prevent issues if the script gets executed before the images get loaded)
-  */
-/*.horizon
-{
-  z-index: 1;
-  width: 3000px;
-}
-
-.middle
-{
-  z-index: 500;
-  width: 4000px;
-}
-
-.front
-{
-  z-index: 1000;
-  width: 6000px;
-}*/
