--- a/aartics/css/aartics.css
+++ b/aartics/css/aartics.css
@@ -14,6 +14,33 @@ body
   overflow-x: hidden;
 }
 
+
+.bigmsg {
+  font-size: 45px;
+  fill: white;
+}
+
+.bigmsg a{
+  font-size: 45px;
+  fill: #00BCD4;
+  text-decoration:underline;
+}
+
+.bigmsg a:hover{
+  font-size: 45px;
+  fill: #F44336;
+}
+
+.bigheader {
+  position: fixed;
+  bottom: 800px;
+  z-index: 0;
+}
+
+#bighi {
+  font-size: 80px;
+}
+
 text {
   fill: whitesmoke;
 }
