--- a/aartics/projects/aartics_projects.css
+++ b/aartics/projects/aartics_projects.css
@@ -14,6 +14,10 @@
   float: left;
 }
 
+#splash {
+  width: 100%;
+}
+
 .project-name {
   float: right;
   padding-right: 10px;
@@ -21,7 +25,7 @@
 
 #project-content {
   text-align: center;
-  padding: 20px 0;
+  /* padding: 20px 0; */
   margin: 15px 0;
 }
 
@@ -39,4 +43,5 @@
 
 body {
   background-color: white;
+  margin: 0;
 }
