--- a/aartics/projects/aartics_projects.css
+++ b/aartics/projects/aartics_projects.css
@@ -25,7 +25,7 @@
 
 #project-content {
   text-align: center;
-  /* padding: 20px 0; */
+  padding: 20px 0;
   margin: 15px 0;
 }
 
@@ -43,5 +43,8 @@
 
 body {
   background-color: white;
-  margin: 0;
+}
+
+.container {
+  max-width: 100%;
 }
