--- a/aartics/projects/aartics_projects.css
+++ b/aartics/projects/aartics_projects.css
@@ -4,6 +4,7 @@
   width: 100%;
   background-color: black;
   color: white;
+  font-family: 'Raleway', sans-serif;
 }
 
 #header-banner {
@@ -34,11 +35,23 @@
 }
 
 .image-title {
+  font-family: 'Raleway', sans-serif;
   padding: 10px;
   margin-top: 10px;
   border-style: solid;
-  border-width: 1px 1px 0 1px;
-  border-color: #ccc;
+  border-width: 3px 0 3px 0;
+  border-color: #ED254E;
+  background-color: #235789;
+  color: #F1D302;
+  font-size: 3vw;
+
+}
+
+.image-title p {
+  font-size: 2.7vw;
+  padding-top: 0;
+  margin-top: 0;
+  color: #F4FFFD;
 }
 
 body {
@@ -46,5 +59,9 @@ body {
 }
 
 .container {
-  max-width: 100%;
+  max-height: 100%;
+}
+
+.container img {
+  height: 100%;
 }
