--- a/aartics/projects/aartics_projects.css
+++ b/aartics/projects/aartics_projects.css
@@ -36,23 +36,37 @@
 
 .image-title {
   font-family: 'Raleway', sans-serif;
+  font-weight:bolder;
   padding: 10px;
   margin-top: 10px;
   border-style: solid;
-  border-width: 3px 0 3px 0;
-  border-color: #ED254E;
-  background-color: #235789;
-  color: #F1D302;
-  font-size: 3vw;
+  border-width: 2px 0 0 0;
+  border-color: #efefef;
+  background-color: #ffffff;
+  color: #000000;
+  font-size: 3.1vw;
 
+}
+
+.image-title h2 {
+  font-size: 2.6vw;
+  font-weight:lighter;
+  padding-top: 0;
+  margin-top: 0;
+  color: #000000;
 }
 
 .image-title p {
-  font-size: 2.7vw;
+  width: 80%;
+  padding-left: 10%;
+  text-align: left;
+  font-size: 2.2vw;
+  font-weight:lighter;
   padding-top: 0;
   margin-top: 0;
-  color: #F4FFFD;
+  color: #000000;
 }
+
 
 body {
   background-color: white;
