--- a/aartics/projects/aartics_projects.css
+++ b/aartics/projects/aartics_projects.css
@@ -31,9 +31,6 @@
   float: left;
   height: 20px;
 }
-#splash {
-  width: 100%;
-}
 
 .project-name {
   float: right;
@@ -51,7 +48,7 @@
 }
 
 .image-title {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'ABeeZee', sans-serif;
   font-weight:bolder;
   padding: 10px;
   margin-top: 10px;
@@ -60,14 +57,15 @@
   border-color: #efefef;
   background-color: #ffffff;
   color: #000000;
-  font-size: 3.1vw;
+  font-size: 3.0vw;
 
 }
 
 .image-title h2 {
+  font-family:'Raleway', sans-serif;
   font-size: 2.6vw;
   font-weight:lighter;
-  padding-top: 0;
+  padding-top: 10px;
   margin-top: 0;
   color: #000000;
 }
@@ -75,8 +73,10 @@
 .image-title p {
   width: 80%;
   padding-left: 10%;
+  padding-top: 20px;
+  font-family: 'Raleway', sans-serif;
   text-align: left;
-  font-size: 2.2vw;
+  font-size: 1.9vw;
   font-weight:lighter;
   padding-top: 0;
   margin-top: 0;
@@ -94,4 +94,10 @@ body {
 
 .container img {
   height: 100%;
+}
+
+.quotes {
+  font-style:italic;
+  font-weight:lighter;
+  font-size: 10px;
 }
