--- a/aartics/projects/aartics_projects.css
+++ b/aartics/projects/aartics_projects.css
@@ -96,6 +96,14 @@
 
 }
 
+.image-title h4 {
+  font-family: 'ABeeZee', sans-serif;
+  font-weight:400;
+  color: #000000;
+  font-size: 28px;
+
+}
+
 .image-title h2 {
   font-family:'Raleway', sans-serif;
   font-size: 22px;
