--- a/aartics/projects/aartics_projects.css
+++ b/aartics/projects/aartics_projects.css
@@ -79,27 +79,29 @@
 }
 
 #project-content img {
+  padding-top: 50px;
   max-width: 100%;
 }
 
 .image-title {
   font-family: 'Raleway', sans-serif;
   font-weight:400;
-  padding: 40px;
-  margin-top: 10px;
+  padding: 100px 0px 50px 0px;
+  margin-top: 100px;
   border-style: solid;
   border-width: 2px 0 0 0;
   border-color: #efefef;
-  background-color: #f8f8f8;
+/*   background-color: #f8f8f8; */
   color: #000000;
   font-size: 31px;
+  color: #22313f
 
 }
 
 .image-title h4 {
   font-family: 'Raleway', sans-serif;
   font-weight:400;
-  color: #000000;
+  color: #22313f;
   font-size: 31px;
 
 }
@@ -148,8 +150,8 @@ body {
 #contents {
   font-family: 'Raleway', sans-serif;
   margin: none;
-  padding: 22px;
-  text-align: center;
+  padding: 100px 200px 0px 250px;
+  text-align: left;
   background-color: #ffffff;
   color: #6d6d6d;
 }
