--- a/aartics/projects/aartics_projects.css
+++ b/aartics/projects/aartics_projects.css
@@ -94,14 +94,14 @@
 /*   background-color: #f8f8f8; */
   color: #000000;
   font-size: 31px;
-  color: #22313f
+  color: #00a3c3;
 
 }
 
 .image-title h4 {
   font-family: 'Raleway', sans-serif;
   font-weight:400;
-  color: #22313f;
+  color: #00a3c3;
   font-size: 31px;
 
 }
