--- a/aartics/projects/aartics_projects.css
+++ b/aartics/projects/aartics_projects.css
@@ -86,7 +86,7 @@
 .image-title {
   font-family: 'Raleway', sans-serif;
   font-weight:400;
-  padding: 100px 0px 50px 0px;
+  padding: 100px 0px 20px 0px;
   margin-top: 100px;
   border-style: solid;
   border-width: 2px 0 0 0;
@@ -116,8 +116,8 @@
 }
 
 .image-title p {
-  width: 80%;
-  padding-left: 10%;
+  width: 60%;
+  padding-left: 20%;
   padding-top: 20px;
   font-family: 'Raleway', sans-serif;
   text-align: center;
@@ -160,6 +160,7 @@ ul {
   font-family: 'Raleway', sans-serif;
   list-style: none;
   font-weight:lighter;
+  line-height: 1.5;
 }
 
 ul a {
@@ -172,4 +173,29 @@ ul a:hover {
   text-decoration: none;
   font-weight:lighter;
   color: #2196F3;
+}
+
+.section-title {
+  background-color: #22313f;
+  margin: 50px 0 0 0;
+  padding: 30px 0 30px 0;
+  font-family: 'Raleway', sans-serif;
+}
+
+.section-title h1 {
+  color: aliceblue;
+
+}
+
+.section-title h4 {
+  color:greenyellow;
+  font-size: 20px;
+}
+
+#drawingobjects {
+  margin-top: 0;
+}
+
+#beginning {
+  margin-top: 0;
 }
