--- a/aartics/css/aartics.css
+++ b/aartics/css/aartics.css
@@ -146,6 +146,16 @@ h1 {
   fill: #00BCD4;
 }
 
+#credits9 a{
+  font-size: 12px;
+  fill: #ffffff;
+}
+
+#credits9 a:hover{
+  font-size: 12px;
+  fill: #00BCD4;
+}
+
 #credits11 a:hover{
   fill: #00BCD4;
 }
