improving case study

--- a/aartics/projects/aartics_projects.css
+++ b/aartics/projects/aartics_projects.css
@@ -172,7 +172,7 @@ body {
   margin: none;
   padding: 50px 200px 50px 250px;
   text-align: left;
-  background-color: #B80C09;
+  background-color: #3C6E71;
   color: #ffffff;
 }
 
