--- a/aartics/projects/aartics_projects.css
+++ b/aartics/projects/aartics_projects.css
@@ -120,7 +120,7 @@
   padding-left: 20%;
   padding-top: 20px;
   font-family: 'Raleway', sans-serif;
-  text-align: center;
+  text-align: left;
   font-size: 18px;
   font-weight:lighter;
   padding-top: 0;
