--- a/aartics/projects/aarti_horiz/css/aartics.css
+++ b/aartics/projects/aarti_horiz/css/aartics.css
@@ -25,7 +25,7 @@
 
 body {
   width: 3500px;
-  overflow-y: hidden;
+/*   overflow-y: hidden; */
   padding: 0;
   margin: 0;
   font-family: 'Raleway', sans-serif;
@@ -33,11 +33,18 @@ body {
   background-color: #22313f;
 }
 
-#bigsvg {
-  position: bottom;
-  height: 760px;
-}
+/* .parent {
+  position: fixed;
+} */
 
+/* .child1 {
+  position: fixed;
+} */
+
+/* .child2 {
+  position: fixed;
+}
+ */
 .cls-1 {
   fill: #374959;
   fill-opacity: .8;
