--- a/aartics/projects/aarti_horiz/css/aartics.css
+++ b/aartics/projects/aarti_horiz/css/aartics.css
@@ -25,7 +25,7 @@
 
 body {
   width: 3500px;
-/*   overflow-y: hidden; */
+  overflow-y: hidden;
   padding: 0;
   margin: 0;
   font-family: 'Raleway', sans-serif;
@@ -33,18 +33,57 @@ body {
   background-color: #22313f;
 }
 
-/* .parent {
-  position: fixed;
-} */
-
-/* .child1 {
-  position: fixed;
-} */
-
-/* .child2 {
-  position: fixed;
+header {
+/*     border: 2px solid red; */
+    position: fixed;
+    right: 0;
+    z-index: 20;
 }
- */
+
+.parent {
+  position: relative;
+  width: 3500px;
+  height: 760px;
+}
+
+.child1 {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+
+.child2 {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.child3 {
+  width: 42%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 4;
+}
+
+.child3 h1 {
+  font-family: "ABeeZee";
+  margin: 200px 0 0 50px;
+  color: white;
+}
+
+.child3 p{
+  color: #e0e0e0;
+  margin: 60px 0 0 50px;
+}
+
 .cls-1 {
   fill: #374959;
   fill-opacity: .8;
@@ -56,13 +95,6 @@ body {
   stroke-width: 2px;
   stroke: #b5b5b5;
 
-}
-
-header {
-/*     border: 2px solid red; */
-    position: fixed;
-    width: 1000px;
-    left: 420px;
 }
 
 #ul_top_hypers li {
@@ -196,21 +228,11 @@ raleway {
   stroke:url('#exampleGradient');
 }
 
-#_3 {
-  fill: #75fffa;
-  fill-opacity: 0.0;
-}
-
-#_3:hover, #_3.hovered{
-  fill-opacity: 0.8;
-  stroke:url('#exampleGradient');
-}
-
 .contact_class {
   fill: #22313f;
-  fill-opacity: 0.4;
-  stroke: #71F300;
-  stroke-width: 4px;
+  fill-opacity: 1;
+  stroke: url(#linear);
+  stroke-width: 7px;
 }
 
 .contact_text a{
